@@ -156,6 +156,19 @@ def test_multiple_default_help(runner):
     assert "foo, bar" in result.output
     assert "1, 2" in result.output
 
+def test_multiple_default_type(runner):
+    @click.command()
+    @click.option("--arg1", multiple=True, default=('foo', 'bar'))
+    @click.option("--arg2", multiple=True, default=(1, "a"))
+    def cmd(arg1, arg2):
+        assert all(isinstance(e[0],str) for e in arg1)
+        assert all(isinstance(e[1],str) for e in arg1)
+
+        assert all(isinstance(e[0],int) for e in arg2)
+        assert all(isinstance(e[1],str) for e in arg2)
+
+    result = runner.invoke(cmd, "--arg1 a b --arg1 test 1 --arg2 2 two --arg2 4 four".split())
+    assert not result.exception
 
 def test_nargs_envvar(runner):
     @click.command()
